<package format="3">
  <name>joint_limits_interface</name>
  <version>0.0.0</version>
  <description>Interface for enforcing joint limits.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/ros-controls/ros2_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros2_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros2_control</url>

  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>

  <build_depend>hardware_interface</build_depend>

  <build_export_depend>hardware_interface</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
