<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_ros2_control</name>
  <version>0.0.0</version>
  <description>A launch extension for ros2_control</description>

  <maintainer email="36795178+SuperJappie08@users.noreply.github.com">Jasper van Brakel</maintainer>

  <license>Apache-2.0</license>

  <author email="36795178+SuperJappie08@users.noreply.github.com">Jasper van Brakel</author>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>

  <test_depend>osrf_pycommon</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
