<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_interface_sensor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Karsten1987@users.noreply.github.com">karsten</maintainer>
  <license>Apache license 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>hardware_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
