<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_core</name>
  <version>0.0.0</version>
  <description>The main package for `ros2_control`-concept testing. The package implements the most important classes and tests them with `demo_robot` to enable functionality and test driven development.</description>
  <maintainer email="denis@stogl.de">stogl</maintainer>
  <license>TODO: License declaration</license>

  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>

  <depend>rclcpp</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
